<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    tools:context=".Activities.SignupActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="205dp"
        android:layout_height="217dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/todo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/assest" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="150dp"
        android:layout_height="829dp"
        android:layout_marginStart="260dp"
        android:contentDescription="@string/todo"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.836"
        app:srcCompat="@drawable/border" />

    <TextView
        android:id="@+id/signuptext"
        android:layout_width="99dp"
        android:layout_height="39dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="44dp"
        android:fontFamily="@font/poppins"
        android:lineSpacingExtra="18sp"
        android:onClick="Signup_click"
        android:text="Sign up"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20sp"
        android:textStyle="bold"
        android:typeface="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/edtnames"
        android:layout_width="254dp"
        android:layout_height="45dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:autofillHints=""
        android:background="@drawable/round_textbox"
        android:drawableStart="@drawable/ic_person_black_24dp"
        android:ems="10"
        android:hint="@string/enter_full_name"
        android:inputType="textPersonName"
        android:textColor="@android:color/background_dark"
        android:textColorHint="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.482"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/edtcity"
        android:layout_width="254dp"
        android:layout_height="45dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="8dp"
        android:autofillHints=""
        android:background="@drawable/round_textbox"
        android:drawableStart="@drawable/ic_location_on_black_24dp"
        android:ems="10"
        android:hint="@string/enter_city_name"
        android:inputType="textPersonName"
        android:textColor="@android:color/background_dark"
        android:textColorHint="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.482"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtphoneno"
        tools:targetApi="o" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="288dp"
        android:layout_height="24dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/poppins"
        android:onClick="loginactivity_click"
        android:text="@string/already_have_an_account_log_in"
        android:textColor="#3B3F3D"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.635"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtconfirmpass" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/poppins"
        android:text="@string/sign_up"
        android:textColor="@color/colorPrimary"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.127"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="205dp" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="65dp"
        android:layout_height="61dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/bloodgroup"
        android:dropDownWidth="wrap_content"
        android:entries="@array/type"
        android:popupBackground="@color/colorPrimary"
        android:spinnerMode="dialog"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.784"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline" />

    <EditText
        android:id="@+id/edtphoneno"
        android:layout_width="254dp"
        android:layout_height="45dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="76dp"
        android:background="@drawable/round_textbox"
        android:drawableStart="@drawable/ic_phone_iphone_black_24dp"
        android:ems="10"
        android:hint="@string/enter_phone_no"
        android:inputType="phone"
        android:maxLength="10"
        android:textColor="@android:color/background_dark"
        android:textColorHint="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.931"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ccp"
        android:importantForAutofill="no" tools:targetApi="o"/>

    <com.hbb20.CountryCodePicker
        android:id="@+id/ccp"
        android:layout_width="259dp"
        android:layout_height="45dp"
        android:layout_marginStart="76dp"
        android:layout_marginTop="16dp"
        app:ccpDialog_keyboardAutoPopup="false"
        app:ccp_defaultNameCode="PK"
        app:ccp_showFullName="true"
        app:ccp_showPhoneCode="true"
        app:ccpDialog_backgroundColor="@color/colorAccent"
        app:ccpDialog_searchEditTextTint="@android:color/background_dark"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtnames" />

    <EditText
        android:id="@+id/edtpass"
        android:layout_width="254dp"
        android:layout_height="45dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/round_textbox"
        android:drawableStart="@drawable/ic_lock_outline_black_24dp"
        android:ems="10"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        android:textColor="@android:color/black"
        android:textColorHint="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.482"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtcity"
        android:importantForAutofill="no" tools:targetApi="o"/>

    <EditText
        android:id="@+id/edtconfirmpass"
        android:layout_width="254dp"
        android:layout_height="45dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/round_textbox"
        android:drawableStart="@drawable/ic_compare_black_24dp"
        android:ems="10"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:textColor="@android:color/black"
        android:textColorHint="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.482"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtpass"
        android:importantForAutofill="no" tools:targetApi="o"/>
</androidx.constraintlayout.widget.ConstraintLayout>